# 9-Task-ml-intro

./: .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
src/Forest_ml/: pipeline.py  train.py
