[tool.poetry]
name = "9-evaluation-selection"
version = "0.1.0"
description = "Homework #9"
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
numpy = "^1.22.3"
sklearn = "^0.0"
click = "^8.1.3"
mlflow = "^1.25.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
