[tool.poetry]
name = "Forest_ml"
version = "0.1.0"
description = ""
authors = ["wert1999 <holubev@gmail.com>"]

[tool.poetry.scripts]
train = "Forest_ml.train:train"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
sklearn = "^0.0"
pandas = "1.3.5"
click = "^8.1.3"
mlflow = "^1.25.1"
nox = "^2022.1.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
